bug: fied responsive issues on mobile

--- a/style.css
+++ b/style.css
@@ -87,5 +87,17 @@
 
     .form .form-input{
         min-width: 200px;
+        
+    }
+
+
+    .form-title{
+        font-size: 15px;
+    }
+
+
+    .form-form-input_form-title{
+        font-size: 8px;
+        padding-left: 5px;
     }
 }
